[gd_scene load_steps=3 format=2]

[ext_resource path="res://Room_Join.gd" type="Script" id=1]
[ext_resource path="res://But_ChangeScene.gd" type="Script" id=2]

[node name="Room_Join" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Multiplayer_Configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Server_IP_Address" type="LineEdit" parent="Multiplayer_Configure"]
margin_left = 386.0
margin_top = 236.0
margin_right = 636.0
margin_bottom = 286.0
text = "Enter Room IP"
align = 1

[node name="Join_Server" type="Button" parent="Multiplayer_Configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = 93.0
margin_right = 271.0
margin_bottom = 193.0
text = "Join Server"

[node name="Room_Password" type="LineEdit" parent="Multiplayer_Configure"]
margin_left = 388.0
margin_top = 311.0
margin_right = 638.0
margin_bottom = 361.0
text = "Room Password"
align = 1

[node name="Player_Name" type="LineEdit" parent="Multiplayer_Configure"]
margin_left = 387.0
margin_top = 164.0
margin_right = 637.0
margin_bottom = 214.0
text = "Player Name"
align = 1

[node name="Back" type="Button" parent="."]
margin_left = 235.0
margin_top = 394.0
margin_right = 485.0
margin_bottom = 494.0
text = "Back"
script = ExtResource( 2 )
next_scene_path = "res://Network_Setup.tscn"

[connection signal="pressed" from="Multiplayer_Configure/Join_Server" to="." method="_on_Join_Server_pressed"]
[connection signal="button_up" from="Back" to="Back" method="_on_But_NewGame_button_up"]
